	non-nil when a tweet is edited as an organic retweet.
	(twittering-update-status-from-minibuffer): post a tweet as a
	reply only if TWEET-TYPE is the symbol `reply'.
	(twittering-update-status): mention that REPLY-TO-ID is non-nil
	when a tweet cites or replies to a certain tweet.
	(twittering-organic-retweet): send the ID of the cited tweet to
	`twittering-update-status' as REPLY-TO-ID.

2012-02-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Accept a symbol as FUNC of a composite
	timeline spec ":exclude-if/FUNC/SPEC".
	(twittering-extract-timeline-spec): accept a symbol as FUNC of
	a composite timeline spec ":exclude-if/FUNC/SPEC".
	* test/test-twittering-mode.el: Add a test of an exclude-if
	timeline spec with a symbol as FUNC.

	* twittering-mode.el: Give the help overlay a priority specified
	by `twittering-help-overlay-priority'.
	(twittering-help-overlay-priority): new variable.
	(twittering-edit-setup-help): give the overlay a priority
	specified by `twittering-help-overlay-priority'.

2012-02-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use an after-string property instead of
	a before-string property to show the help on an edit buffer.
	Thanks to irie who discoverd the problem and wrote a suitable
	code.
	(twittering-edit-setup-help): set an after-string property of the
	overlay for the help and give high priority to the overlay.

	* twittering-mode.el: Remove duplicates in a merge timeline spec.
	(twittering-extract-timeline-spec): remove duplicates in a list of
	timeline specs in a merge timeline spec.
	* test/test-twittering-mode.el: Add a test of reducing duplicates
	in a merge timeline spec.

	* twittering-mode.el: Remove duplicates in the list of primary
	base timeline specs.
	(twittering-get-primary-base-timeline-specs): remove duplicates in
	the list of primary base timeline specs.
	* test/test-twittering-mode.el: Add a test of dependence of
	composite timeline specs.
